Vatras dialog won't have a mention of the novice at monastery gate if NH did not meet him.
Vatras does not sell Almanacs of the Possessed given to him in Irdorath.
Vatras gives different scrolls as reward for bringing stone tablets, if NH has corresponding runes.
Vatras introduces Martin to NH when reporting Fernando, if he has not already been mentioned.
Vatras' offer for the Will-o'-the-wisp amulet can be refused, so NH never receives the amulet.
Wolf cannot be talked about joining the mercenaries if part of a guild already.
Wolf will not join the crew if he gets pissed off at NH.
Wulfgar makes comments on training of weapon skills.
Xardas' dialog has 3 more previously unused dialogue lines.


	Random

Added new teleport scroll to get out of the ruins behind broken bridge in Jharkendar.
Annotation added for giving and taking back letter to Elvrich, letter to Greg, recipe for Opolos, map to Saturas.
Black Ore effect ends on using transformation scrolls.
Document visual changed for Esteban's Bodyguard, Pablo, Senyan, Skip, a thug in Khorinis for reading NH's wanted poster and Saturas for reading a map.
Failing to create runes for Ice Block and Destroy Undead properly returns the runestone to inventory.
Gold mining skill does not improve by mining empty veins.
Herring is categorized as food.
Magic Runes are removed from frozen corpses.
Monastery novice quest become obsolete only after player becomes a mage.
Nostalgia bonus properly awards levels to NH.
Novices do not create additional sausages when given one.
Quarhodron summoning scroll changed from piece of paper into proper scroll.
Sheep cannot be bought from Onar or Pepe after escorting one to the monastery.
Steel Blanks and Lab Water Bottles cannot be looted from anyone.

Following actions no longer cause unnecessary journal updates: